tests/negative/unterminated_string.c
int main(void) { char *p = "hello; return 0; }
